@@ -1,3 +1,9 @@
+2006-01-08  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/mozilla/ContentHandler.cpp:
+
+	Make ESC cancel the content handler dialogue. Bug #325811.
+
 2006-01-06  Crispin Flowerday  <gnome@flowerday.cx>
 
 	* src/window-commands.c (window_cmd_help_about): 
